[package]
name = "ghuanye"
version = "0.1.0"
authors = ["zhujz1 <zhujiangzhou@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"]}
